apps/yt2radarr/yt2radarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yt2radarr
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: yt2radarr.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yt2radarr
            port:
              number: 80
